adding azure active directory b2c authentication

--- a/collaborativedoceditor.client/src/Components/CustomTextField.scss
+++ b/collaborativedoceditor.client/src/Components/CustomTextField.scss
@@ -1,5 +1,6 @@
 .custom-root .MuiOutlinedInput-root fieldset {
   border: none; /* Remove the border */
+  padding-bottom: 10px;
 }
 
 .custom-root .MuiOutlinedInput-root legend {
